--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <meta charset='utf-8'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
+
 <body>
-    <h1>Home! Yelp Camp!</h1>
-    
+    <h1>HOME! YELP CAMP!</h1>
+
 </body>
+
 </html>
