--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -9,7 +9,8 @@
 
 <body>
     <h1>Edit Campground</h1>
-    <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST">
+    <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST"> 
+        <!-- method overide here we want a put or a patch not a post -->
         <div>
             <label for="title">Title</label>
             <input type="text" id="title" name="campground[title]" value="<%=campground.title %>">
