--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,5 +1,6 @@
 <% if(success && success.length) {%>
     <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <!-- fade and show and button to dismiss flash -->
         <%= success %>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -15,3 +16,4 @@
         </button>
     </div>
     <% } %>
+    <!-- bootstrap template role alert for accesi purp, we only want it to show up on the page if there is a success -->
